syntax = "proto3";

option csharp_namespace = "ProfileService.BLL.Grpc.Services";

import "google/protobuf/timestamp.proto";

package profile;

service ProfileService {
    rpc GetProfile (ProfileRequest) returns (ProfileResponse);
    rpc GetOwnProfile (OwnProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
    string id = 1;
}

message ProfileResponse {
    string id = 1;
    string auth0Id = 2;
    string first_name = 3;
    string last_name = 4;
    string phone_number = 5;
    google.protobuf.Timestamp birth_date = 6;
}

message OwnProfileRequest {
    string auth0_id = 1;
}
